--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1223,12 +1223,22 @@ tr.bad-row a{
 	color: white;
 }
 
-
-
 li.listStyle-elenco{
 	list-style-type: square;
 }
 
 li.listStyle-elenco > label{
 	vertical-align: top;
+}
+
+.input-group-addon.add {
+	background-color: #1abc9c;
+	color: white;
+	border-color: #169f85;
+}
+
+.input-group-addon.remove {
+	background-color: #d9534f;
+	color: white;
+	border-color: #d9534f;
 }
