--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -556,17 +556,16 @@
 								</div>
 
 								<!-- PROFESSIONI/DISCIPLINE -->
-								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.discipline')} ? 'bad'">
-									<label class="control-label col-xs-1">
-										<span>15</span>
-									</label>
-									<label class="control-label col-md-3 col-sm-3 col-xs-11">
-										<span th:text="#{label.professioni_discipline}">Professioni / Discipline</span>
-										<span class="required">*</span>
-									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="evento_professioni-select">
-										<div class="col-xs-12 select-with-margin-container">
-											<select id="professioni" class="selectpicker required multi"
+									<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.discipline')} ? 'bad'">
+										<label class="control-label col-xs-1">
+											<span>15</span>
+										</label>
+										<label class="control-label col-md-3 col-sm-3 col-xs-11">
+											<span th:text="#{label.professioni}">Professioni</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="evento_professioni-select">
+											<select id="professioni" class="selectpicker multi"
 												multiple="multiple" data-width="100%"
 												data-style="btn-primary" data-actions-box="true"
 												data-size="10" title="Seleziona una professione..."
@@ -577,24 +576,33 @@
 													th:field="${eventoWrapper.evento.professioniSelezionate}"></option>
 											</select>
 										</div>
-										<select id="discipline" class="selectpicker required multi"
-											th:field="${eventoWrapper.evento.discipline}"
-											multiple="multiple" data-width="100%"
-											data-style="btn-success" data-actions-box="true"
-											data-size="10" data-hide-disabled="true"
-											title="Seleziona una disciplina..." disabled="disabled"
-											data-selected-text-format="count" th:remove="all-but-first">
-											<optgroup class="optgroup-success" disabled="disabled"
-												th:each="professione, row: ${eventoWrapper.professioneList}" th:unless="${professione.nome == 'Nessuna professione sanitaria'}"
-												th:label="${professione.nome}" th:remove="all-but-first">
-												<option th:each="disciplina, row: ${eventoWrapper.disciplinaList}"
-													th:if="${disciplina.professione == professione}"
-													th:value="${disciplina.id}" th:text="${disciplina.nome}"></option>
-											</optgroup>
-										</select>
+										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.discipline')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.discipline')}__}"></div>
 									</div>
-									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.discipline')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.discipline')}__}"></div>
-								</div>
+									<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.discipline')} ? 'bad'">
+										<div class="col-xs-1"></div>
+										<label class="control-label col-md-3 col-sm-3 col-xs-11">
+											<span th:text="#{label.discipline}">Discipline</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+											<select id="discipline" class="selectpicker multi"
+												th:field="${eventoWrapper.evento.discipline}"
+												multiple="multiple" data-width="100%"
+												data-style="btn-success" data-actions-box="true"
+												data-size="10" data-hide-disabled="true"
+												title="Seleziona una disciplina..." disabled="disabled"
+												data-selected-text-format="count" th:remove="all-but-first">
+												<optgroup class="optgroup-success" disabled="disabled"
+													th:each="professione, row: ${eventoWrapper.professioneList}" th:unless="${professione.nome == 'Nessuna professione sanitaria'}"
+													th:label="${professione.nome}" th:remove="all-but-first">
+													<option th:each="disciplina, row: ${eventoWrapper.disciplinaList}"
+														th:if="${disciplina.professione == professione}"
+														th:value="${disciplina.id}" th:text="${disciplina.nome}"></option>
+												</optgroup>
+											</select>
+										</div>
+										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.discipline')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.discipline')}__}"></div>
+									</div>
 
 								<!-- BLOCCO TIPOLOGIA DI EVENTO -->
 								<!-- TIPOLOGIA DELL'EVENTO -->
@@ -707,6 +715,10 @@
 										</div>
 									</div>
 								</div>
+							</div>
+						</div>
+						<div role="tabpanel" class="tab-pane fade" id="tab_content2" aria-labelledby="tab2">
+							<div class="col-xs-12 section-index" id="section-2" th:fragment="section-2">
 
 								<!-- DESCRIZIONE DEL PROGETTO -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.descrizioneProgetto')} ? 'bad'">
@@ -722,10 +734,6 @@
 									</div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.descrizioneProgetto')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.descrizioneProgetto')}__}"></div>
 								</div>
-							</div>
-						</div>
-						<div role="tabpanel" class="tab-pane fade" id="tab_content2" aria-labelledby="tab2">
-							<div class="col-xs-12 section-index" id="section-2" th:fragment="section-2">
 
 								<th:block th:if="${eventoWrapper.evento.tipologiaEvento == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).PROGETTI_DI_MIGLIORAMENTO}">
 
@@ -863,7 +871,7 @@
 										<span th:text="#{label.crediti_formativi_attribuiti_evento}">Crediti attribuiti all'evento</span>
 										<span class="required">*</span>
 									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="durata">
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 				 						<div class="value-edit" th:text="${eventoWrapper.evento.crediti}"></div>
 				 					</div>
 								</div>
@@ -1035,6 +1043,10 @@
 												<span th:text="#{label.allegato_autocertificazione_autorizzazione_ministero}">Autocertificazione di autorizzazione del Ministero della Salute</span>
 												<span class="required">*</span>
 											</label>
+											<div class="model-link">
+												<i class="fa fa-file-text"></i>
+												<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+											</div>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAutorizzazioneMinisteroSalute, null, null, null, true, null, false)" ></th:block>
 											</div>
@@ -1049,6 +1061,10 @@
 												<span th:text="#{label.allegato_autocertificazione_assenza_finanziamenti_sponsor}">Autocertificazione relativa all'assenza di partecipazione finanziaria di imprese interessate agli alimenti per la prima infanzia</span>
 												<span class="required">*</span>
 											</label>
+											<div class="model-link">
+												<i class="fa fa-file-text"></i>
+												<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+											</div>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia, null, null, null, true, null, false)" ></th:block>
 											</div>
@@ -1107,6 +1123,10 @@
 											<span th:text="#{label.allegato_autocertificazione_assenza_finanziamenti}">Allegato autocertificazione assenza finanziamenti</span>
 											<span class="required">*</span>
 										</label>
+										<div class="model-link">
+											<i class="fa fa-file-text"></i>
+											<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+										</div>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 											<th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaFinanziamenti, null, null, null, true, null, false)" ></th:block>
 										</div>
@@ -1167,6 +1187,10 @@
 										<span th:text="#{label.dichiarazione_assenza_conflitto_interesse}">Dichiarazione di assenza di conflitto di interesse</span>
 										<span class="required">*</span>
 									</label>
+									<div class="model-link">
+										<i class="fa fa-file-text"></i>
+										<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+									</div>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 										<th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, dichiarazioneAssenzaConflittoInteresse, null, null, null, false, null, false)" ></th:block>
 									</div>
