--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1490,7 +1490,7 @@
 
 				//funzione che aggiunge una data intermedia, aumenta il name in base alle date già presenti
 				function aggiungiDataIntermedia(caller, target) {
-					//alert('aggiungiDataIntermedia');
+					alert('aggiungiDataIntermedia');
 					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addDataIntermedia/|}]] + target, $('#formEventoRES').serialize())
 					.done(function(data) {
 						//alert(data);
@@ -1501,7 +1501,7 @@
 					  })
 				  	.fail(function() {
 				  		//TODO mostra error sui campi mancanti
-				    	alert( "error" );
+				    	alert( "error a" );
 				 	 })
 
 					/*
@@ -1521,7 +1521,7 @@
 
 				//rimuove una data intermedia
 				function rimuoviDataIntermedia(caller, target, key) {
-					//alert('rimuoviDataIntermedia');
+					alert('rimuoviDataIntermedia');
 					//alert('url: ' + [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeDataIntermedia/|}]] + key + '/' + target);
 					//alert('target: ' + target);
 					//alert($('#' + target).size());
@@ -1539,7 +1539,7 @@
 					  })
 				  	.fail(function() {
 				  		//TODO mostra error sui campi mancanti
-				    	alert( "error" );
+				    	alert( "error b" );
 				 	 })
 
 					/*
@@ -1940,7 +1940,7 @@
 				}
 
 				function sendAjaxReloadSection(sectionIndex){
-					//alert('sendAjaxReloadSection - sectionIndex: ' + sectionIndex);
+					alert('sendAjaxReloadSection - sectionIndex: ' + sectionIndex);
 					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/showSection/|}]] + sectionIndex, $('#formEventoRES').serialize())
 					.done(function(data) {
 					  	$('#section-' + sectionIndex).html(data);
@@ -1948,7 +1948,7 @@
 					  })
 				  	.fail(function() {
 				  		//TODO mostra error sui campi mancanti
-				    	alert( "error" );
+				    	alert( "error c" );
 				 	 })
 				}
 
