--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1065,6 +1065,40 @@ h2 {
 	opacity: 1;
 }
 
+.item.alert-tabella-evento-under .alert {
+	margin: 15px 0 0 0;
+	padding: 3px 10px;
+	color: #FFF;
+	border-radius: 4px;
+	background-color: #CE5454;
+	max-width: 100%;
+	white-space: pre-line;
+	position: relative;
+	opacity: 0;
+	z-index: 1;
+	transition: 0.15s ease-out;
+}
+
+.item.alert-tabella-evento-under .alert::after {
+	content: '';
+	display: block;
+	height: 0;
+	width: 0;
+	border-color: transparent #CE5454 transparent transparent;
+	border-style: solid;
+	border-left: 11px solid transparent;
+	border-right: 11px solid transparent;
+	border-bottom: 7px solid #CE5454;
+	position: absolute;
+	left: 30px;
+	top: -18px;
+}
+
+.item.bad.alert-tabella-evento-under.bad .alert {
+	left: 0;
+	opacity: 1;
+}
+
 .bad-table {
 	border-color: #CE5454;
 }
