Relazione Annuale WIP

--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1952,7 +1952,7 @@
 				}
 
 				function sendAjaxReloadSection(sectionIndex){
-					alert('sendAjaxReloadSection - sectionIndex: ' + sectionIndex);
+					//alert('sendAjaxReloadSection - sectionIndex: ' + sectionIndex);
 					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/showSection/|}]] + sectionIndex, $('#formEventoRES').serialize())
 					.done(function(data) {
 					  	$('#section-' + sectionIndex).html(data);
